@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-13T01:08:40Z",
+  "timestamp" : "2022-05-13T08:13:56Z",
   "count_outdated" : 264,
   "uniques_outdated" : 130,
-  "count" : 298,
-  "uniques" : 154,
+  "count" : 299,
+  "uniques" : 155,
   "clones" : [
     {
       "timestamp": "2022-05-01T00:00:00Z",
@@ -72,6 +72,13 @@
       "timestamp": "2022-05-12T00:00:00Z",
       "count": 3,
       "count_minmax": [ 0, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-05-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
