@@ -1,5 +1,5 @@
 {
-  "count": 34,
+  "count": 35,
   "uniques": 14,
   "clones": [
     {
@@ -50,6 +50,11 @@
     {
       "timestamp": "2022-05-12T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-13T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
