@@ -1,3 +1,9 @@
+2022-05-13T08:13:56Z:
+* notice: last 14d: all unq: 35 14
+* notice: prev accum: outdated-all outdated-unq / all unq: 264 130 / 298 154
+* notice: next accum: outdated-all outdated-unq / all unq: 264 130 / 299 155
+* notice: prev json diff / prev day diff: unq all: +1 +1 -0 -0 / +1 +2 -0 -0
+
 2022-05-13T01:08:40Z:
 * notice: last 14d: all unq: 34 14
 * notice: prev accum: outdated-all outdated-unq / all unq: 264 130 / 297 154
